--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.application.name=journalApp
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=journaldb
+spring.data.mongodb.auto-index-creation=true
+#by default spring will not index the fields in the mongoDB we need to specify it explicitly here
 
 
