Spring Security integration and authentication of APIs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=journalApp
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb+srv://piyush:9997155337@cluster0.48cvw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+#For local connection
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
 spring.data.mongodb.database=journaldb
 spring.data.mongodb.auto-index-creation=true
 #by default spring will not index the fields in the mongoDB we need to specify it explicitly here
 
-
+#If circular dependency comes then add this property
+spring.main.allow-circular-references=true 
