How to use External apis in spring boot.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.data.mongodb.auto-index-creation=true
 
 #If circular dependency comes then add this property
 spring.main.allow-circular-references=true 
+
+weather.api.key=b478051c984a17056932f473f9215605
