--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,12 @@ spring.main.allow-circular-references=true
 
 weather.api.key=b478051c984a17056932f473f9215605
 
+# setting for mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=email@gmail.com
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Redis properties
